fixed dark mode for empty notifications

--- a/css/style.css
+++ b/css/style.css
@@ -521,6 +521,7 @@ footer {
         display: flex;
         justify-content: center;
         width: 100%;
+        color: var(--text);
     }
   }
   
